# llmb_rts_notebook

./: .gitignore  .gitmodules  CLAUDE.md  Engineering_Guide.md  README.md  Testing.md  chat-export-2026-04-26T04-22-39.md  package-lock.json  package.json  pixi_guide.md  pyproject.toml  test_chat_mode.ipynb
.claude/agents/: chat-decompose-adr.md  chat-decompose-chapter.md  chat-decompose-clusterer.md  chat-decompose-reconciler.md
.claude/commands/: decompose-chat.md
_ingest/: ARCHITECTURE.md  PROCEDURE.md
_ingest/manifests/: decisions.json  phases.json  reconciliation.md  source.sha256  turns.json
_ingest/prototypes/: r2-prototype.md  stage3-trace-tier1.jsonl  stage3-trace-tier3-mitm-otlp.jsonl  stage3-trace-tier3-mitm.jsonl  stage3-trace-tier3-oauth.jsonl
_ingest/scripts/: build_turn_index.py  diag_alternation.py  split_into_phases.py  verify.py
docs/: README.md
docs/atoms/: README.md
docs/bsps/: BSP-001-proxy-lifecycle.md
docs/decisions/: 0001-rts-as-agent-orchestrator.md  0002-agents-as-hypergraph-authors.md  0003-six-tier-architecture-locked.md  0004-per-zone-mcp-servers.md  0005-v1-scope-cut.md  0006-reject-react-frontend-not-the-question.md  0007-vscode-as-host.md  0008-bidirectional-mcp-as-comm-channel.md  0009-notebook-controller-no-jupyter-kernel.md  0010-force-tool-use-suppress-text.md  0011-subtractive-fork-vscode-jupyter.md  0012-llmkernel-sole-kernel.md  0013-v1-feasible-with-claude-code.md  0014-three-storage-structures-embedded.md  0015-kernel-extension-bidirectional-mcp.md  0016-rfc-standards-discipline.md  README.md
docs/dev-guide/: 00-overview.md  01-vega-rendering-substrate.md  02-agent-orchestration-pivot.md  03-hypergraph-observability.md  04-isolation-and-mcp-placement.md  05-v1-scope-reduction.md  06-vscode-notebook-substrate.md  07-subtractive-fork-and-storage.md  08-blockers-mediator-standards.md
docs/notebook/: BSP-002-conversation-graph.md  BSP-003-writer-registry.md  BSP-004-kernel-runtime.md  BSP-005-cell-roadmap.md  BSP-006-embedded-asgi.md  BSP-007-overlay-git-semantics.md  BSP-008-contextpacker-runframes.md  FSP-001-cells-to-openui.md  FSP-002-cell-search-collapse.md  FSP-003-test-campaign.md  KB-cells-and-notebooks.md  KB-notebook-target.md  PLAN-M-series.md  PLAN-S0.5-cell-kinds.md  PLAN-S10-three-pane-search.md  PLAN-S3.5-context-packer.md  PLAN-S4-cross-agent-handoff.md  PLAN-S4.1-turn-graph-persistence.md  PLAN-S5-branch-revert-stop.md  PLAN-S5.0-cell-magic-vocabulary.md  PLAN-S5.0.1-cell-magic-injection-defense.md  PLAN-S5.0.2-magic-code-generators.md  PLAN-S5.0.3-driver-extraction-and-external-runnability.md  PLAN-S5.5-sections.md  (+11 more)
extension/: .mocharc-unit.cjs  .mocharc-unit.empty-suite.js  .mocharc.json  .vscode-test-live.mjs  .vscode-test-stub.mjs  .vscode-test.mjs  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  wdio.conf.ts
llm_client/: __init__.py  __main__.py  boot.py  driver.py  executor.py  notebook.py
profile_default/: history.sqlite
tests/: test_auth_token_storage.py  test_boot_minimal_kernel.py  test_campaign_smoke.py  test_cli_auth.py  test_cli_convert.py  test_cli_execute.py  test_cli_validate.py  test_console_script.py  test_executor_live_integration.py  test_executor_live_mode.py  test_executor_replay_mode.py  test_executor_stub_mode.py  test_format_converters.py  test_handshake_envelope.py  test_lint_boundary.py  test_one_connection_at_a_time.py  test_smokes_use_driver.py  test_tcp_transport.py  test_unattended_flag.py
tools/: check_atom_drift.py
(+346 files in other folders)
