[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
dependencies = []
name = "llmb_rts_notebook"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.kernel.dependencies]
nodejs = ">=20.0.0"

[tool.pixi.feature.kernel.pypi-dependencies]
litellm = ">=1.50.0"
mcp = ">=1.0.0"
jupyter_client = ">=8.6.0"
ipykernel = ">=6.29.0"
langsmith = ">=0.2.0"
pydantic = ">=2.9.0"
hypothesis = ">=6.115.0"
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"

[tool.pixi.feature.kernel.tasks]
kernel-dev = "python -m llmkernel"
kernel-test = "pytest vendor/LLMKernel/tests/ -v"
extension-build = { cmd = "npm run build", cwd = "extension" }
extension-test = { cmd = "npm test", cwd = "extension" }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
kernel = { features = ["kernel"], solve-group = "default" }

[tool.pixi.tasks]
build-turn-index = "python _ingest/scripts/build_turn_index.py"
split-into-phases = "python _ingest/scripts/split_into_phases.py"
verify-coverage = "python _ingest/scripts/verify.py"
