[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
name = "llmb_rts_notebook"
requires-python = ">= 3.11"
version = "0.1.0"

# `llmnb` console-script entry point (PLAN-S5.0.3 §6.1).
# The fully-installed `llmnb` binary aliases `python -m llm_client`.
[project.scripts]
llmnb = "llm_client.cli.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["llm_client"]

[tool.pytest.ini_options]
# Custom markers used in tests/. Registering here silences the
# ``PytestUnknownMarkWarning`` and gates slow tests behind ``-m integration``.
markers = [
    "integration: end-to-end tests that spawn the kernel as a subprocess",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.kernel.dependencies]
nodejs = ">=20.0.0"

[tool.pixi.feature.kernel.pypi-dependencies]
litellm = ">=1.50.0"
mcp = ">=1.0.0"
jupyter_client = ">=8.6.0"
ipykernel = ">=6.29.0"
langsmith = ">=0.2.0"
pydantic = ">=2.9.0"
hypothesis = ">=6.115.0"
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-xdist = ">=3.5"
pytest-timeout = ">=2.3"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.0"
httpx = ">=0.27.0"
anthropic = ">=0.40.0"
python-dotenv = ">=1.0.0"
mitmproxy = ">=11.0.0"
llm-kernel = { path = "vendor/LLMKernel", editable = true }
llmb-rts-notebook = { path = ".", editable = true }
build = ">=1.2.0"

[tool.pixi.feature.kernel.tasks]
kernel-dev = "python -m llmkernel"
kernel-test = "pytest vendor/LLMKernel/tests/ -v"
driver-test = "pytest tests/ -q"
extension-build = { cmd = "npm run build", cwd = "extension" }
extension-test = { cmd = "npm test", cwd = "extension" }
check-builds = "python -m build --no-isolation --wheel ."

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
kernel = { features = ["kernel"], solve-group = "default" }

[tool.pixi.tasks]
build-turn-index = "python _ingest/scripts/build_turn_index.py"
split-into-phases = "python _ingest/scripts/split_into_phases.py"
verify-coverage = "python _ingest/scripts/verify.py"
